width: auto added to width-fill

--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -220,6 +220,7 @@
         // style="--sf-width-fill: true;"
         & > [role="gridcell"][style~="--#{$prefix}width-fill:"] {
 
+            width: auto;
             flex-grow: 1;
             flex-shrink: 1;
         }
